# agent_sentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  PRD.md  README.md  anchor_log.jsonl  dashboard.railway.toml  docker-compose.yml  main.py  presentation.html  presentation.md  pyproject.toml  railway.json  sentinel.pptx
dashboard/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  railway.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/agent/: page.tsx
dashboard/src/app/cost/: page.tsx
dashboard/src/app/policies/: page.tsx
dashboard/src/components/: decision-badge.tsx  footer.tsx  logo.tsx  top-nav.tsx
dashboard/src/lib/: sentinelApi.ts  utils.ts
docs/: DEMO_5MIN_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_POSTMORTEM.md  PRESENTATION.md  RAILWAY_DEPLOY.md
eval_results/: full_run.txt  run_v2.json  run_v2.txt
examples/: adk_demo.py
scripts/: load_generator.py  seed_demo.py
sql/: 001_init.sql  002_phase2.sql
src/sentinel/: __init__.py  alerts.py  anchoring.py  cli.py  config.py  kms.py  models.py
src/sentinel/a2a/: __init__.py  models.py  server.py
src/sentinel/adapters/: __init__.py  a2a_adapter.py  anthropic_adapter.py  core.py  crewai_adapter.py  google_adk_adapter.py  mcp_adapter.py  openai_adapter.py
src/sentinel/agent_runner/: __init__.py  runner.py  tools.py
src/sentinel/audit/: __init__.py  ledger.py  verify.py
src/sentinel/cost/: __init__.py  meter.py
src/sentinel/db/: __init__.py  engine.py
src/sentinel/demo_agents/: __init__.py  runner.py  seed_pdfs.py
src/sentinel/eval/: __init__.py  cases.py  runner.py
src/sentinel/gateway/: __init__.py  app.py  pipeline.py  rate_limit.py
src/sentinel/gating/: __init__.py  drift.py  flash.py  pro.py  static_engine.py
src/sentinel/policy_pipe/: __init__.py  cache_builder.py  catalog.py  extractor.py  loader.py  refresher.py
tests/: conftest.py
tests/integration/: test_a2a.py  test_eval_smoke.py  test_gateway.py  test_ledger_verify.py
tests/unit/: test_adapters_core.py  test_alerts.py  test_anchoring.py  test_drift.py  test_kms.py  test_ledger_signature.py  test_static_engine.py
(+8 files in other folders)
