[project]
name = "agent-sentinel"
version = "0.1.0"
description = "Agent Sentinel — Gemini-powered governance plane for enterprise AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-genai>=0.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "pyjwt>=2.9",
    "orjson>=3.10",
    "python-multipart>=0.0.12",
    "fpdf2>=2.8.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# SQLAlchemy's async engine pool binds connections to the active event loop
# on first use; sharing the loop across tests keeps DB-backed fixtures usable
# in integration tests without resetting the engine per-test.
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
